--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.6",
   "main": "index.js",
   "repository": "git@github.com:ColdFusionTech/CFSelect.git",
-  "author": "Eric Kim <bosung90@gmail.com>",
+  "author": "bosung90",
   "license": "MIT",
   "scripts": {
     "release": "release-it"
