--- a/package.json
+++ b/package.json
@@ -13,5 +13,10 @@
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
+  },
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "react": "16.4.1",
+    "react-redux": "^5.0.7"
   }
 }
