--- a/package.json
+++ b/package.json
@@ -1,22 +1,47 @@
 {
   "name": "cf-select",
   "version": "1.0.9",
-  "main": "index.js",
+  "main": "dist/index.js",
   "repository": "git@github.com:ColdFusionTech/CFSelect.git",
-  "author": "bosung90",
+  "author": "Eric Kim <bosung90@gmail.com>",
   "license": "MIT",
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ]
+  },
+  "keywords": [
+    "cfselect",
+    "cf-select",
+    "selector",
+    "select",
+    "redux"
+  ],
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "babel --out-dir dist --ignore *.test.js src",
     "release": "release-it"
-  },
-  "devDependencies": {
-    "release-it": "^7.6.1"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "lodash": "^4.17.11",
     "react": "16.4.1",
     "react-redux": "^5.0.7"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.1",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "release-it": "^7.6.1",
+    "rimraf": "^2.6.2"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
