--- a/package.json
+++ b/package.json
@@ -26,18 +26,27 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "babel --out-dir dist --ignore *.test.js src",
-    "release": "release-it"
+    "release": "release-it",
+    "test": "jest"
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "react": "16.4.1",
-    "react-redux": "^5.0.7"
+    "react": "16.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.1",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "jest": "^23.6.0",
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0",
+    "redux-mock-store": "^1.5.3",
     "release-it": "^7.6.1",
     "rimraf": "^2.6.2"
   },
