--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "lodash": "^4.17.11",
-    "react": "16.4.1"
+    "react": "16.4.1",
+    "react-redux": "^5.0.7"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
@@ -44,7 +45,6 @@
     "enzyme-adapter-react-16": "^1.5.0",
     "jest": "^23.6.0",
     "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-mock-store": "^1.5.3",
     "release-it": "^7.6.1",
