--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cf-select",
   "version": "1.0.27",
   "main": "dist/index.js",
-  "repository": "git@github.com:ColdFusionTech/CFSelect.git",
+  "repository": "git@github.com:CodeFusionTech/CFSelect.git",
   "author": "Eric Kim <bosung90@gmail.com>",
   "license": "MIT",
   "babel": {
@@ -32,7 +32,8 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "react": "16.4.1",
-    "react-redux": "^5.0.7"
+    "react-redux": "^5.0.7",
+    "merge": ">=1.2.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
